카메라 기능을 커스터마징 버전으로 업데이트하여 연사가능하게 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         </activity>
         <activity android:name=".RegisterActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".CameraActivity"
+            android:screenOrientation="portrait"/>
 
         <provider
             android:authorities="com.example.kcalmera"
