--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,10 @@
     <uses-feature android:name="android.hardware.camera"
         android:required="true" />
 
+    <!-- 네트워크 사용에 대한 퍼미션 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_camera_icon"
